--- a/calculadora/assets/css/style.css
+++ b/calculadora/assets/css/style.css
@@ -3,7 +3,7 @@
 *{
     margin: 0px;
     padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Helvetica', sans-serif;
 }
 
 html{
@@ -11,8 +11,9 @@ html{
 }
 
 section{
-    max-width: 550px;
-    background-color: white;
+    max-width: 268px;
+    height: 584px;
+    background: url('../img/frame-iphone.png') no-repeat;
     margin: 50px auto;
     padding: 20px;
     border-radius: 8px;
@@ -27,14 +28,17 @@ section > p{
 }
 
 table{
-    width: 350px;
+    position: absolute;
+    top: 41.2%;
+    left: 41.4%;
+    width: 268px;
     border-collapse: separate;
     border-spacing: 5px;
 }
 
 td{
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     border: 1px solid black;
     text-align: center;
     padding: 8px;
@@ -56,5 +60,9 @@ td.btn-dir{
 }
 
 td.btn-cima{
-    border-color: #A5A5A5;
+    background-color: #A5A5A5;
+}
+
+p#visor{
+    height: 70px;
 }
